fix bug where overlay was covering text on hero on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1187,9 +1187,9 @@ body,
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
 }
 .hero__content {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1198,6 +1198,7 @@ body,
   text-align: center;
   padding: 40px 1rem;
   font-weight: 600;
+  z-index: 1;
 }
 @media screen and (min-width: 992px) {
   .hero__content {
@@ -1329,8 +1330,7 @@ body,
 
 .full-width-container--hero {
   position: relative;
-  min-height: 34.375rem;
-  max-height: 34.375rem;
+  height: 34.375rem;
   overflow: hidden;
 }
 
